WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101560
Web Inspector: No content available for requests made from flash
https://bugs.webkit.org/show_bug.cgi?id=101560
Summary
Web Inspector: No content available for requests made from flash
Vsevolod Vlasov
Reported
2012-11-08 00:55:37 PST
Patch to follow
Attachments
Patch
(7.18 KB, patch)
2012-11-08 03:06 PST
,
Vsevolod Vlasov
pfeldman
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-11-08 03:06:19 PST
Created
attachment 172978
[details]
Patch
Andrey Kosyakov
Comment 2
2012-11-08 03:20:44 PST
Comment on
attachment 172978
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172978&action=review
LGTM
> Source/WebCore/inspector/InspectorResourceAgent.cpp:294 > + if (resourceData && !m_loadingXHRSynchronously && (!resourceData->cachedResource() || !resourceData->cachedResource()->shouldBufferData() || isErrorStatusCode(resourceData->httpStatusCode())))
nit: extract bool missingCachedResourceData = !resourceData->cachedResource() || !resourceData->cachedResource()->shouldBufferData() || isErrorStatusCode(resourceData->httpStatusCode() for better readability.
Vsevolod Vlasov
Comment 3
2012-11-08 03:37:17 PST
> > Source/WebCore/inspector/InspectorResourceAgent.cpp:294 > > + if (resourceData && !m_loadingXHRSynchronously && (!resourceData->cachedResource() || !resourceData->cachedResource()->shouldBufferData() || isErrorStatusCode(resourceData->httpStatusCode()))) > > nit: extract bool missingCachedResourceData = !resourceData->cachedResource() || !resourceData->cachedResource()->shouldBufferData() || isErrorStatusCode(resourceData->httpStatusCode() > for better readability.
I don't think it would be more readable as I would also need to add a nullity check for resourceData as well anyway.
Andrey Kosyakov
Comment 4
2012-11-08 03:49:08 PST
> I don't think it would be more readable as I would also need to add a nullity check for resourceData as well anyway.
Indeed -- please disregard this remark.
WebKit Review Bot
Comment 5
2012-11-13 02:10:59 PST
Comment on
attachment 172978
[details]
Patch Rejecting
attachment 172978
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: yle/checkers/python.py", line 31, in <module> from webkitpy.thirdparty.autoinstalled.pylint import lint File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/pylint/lint.py", line 31, in <module> from pylint.checkers import utils File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/thirdparty/autoinstalled/pylint/checkers/__init__.py", line 44, in <module> from logilab.astng.utils import ASTWalker ImportError: No module named logilab.astng.utils Full output:
http://queues.webkit.org/results/14825155
Vsevolod Vlasov
Comment 6
2012-11-14 01:31:19 PST
Committed
r134574
: <
http://trac.webkit.org/changeset/134574
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug