Web Inspector: No content available for requests made from flash https://bugs.webkit.org/show_bug.cgi?id=101560

Reviewed by Pavel Feldman.

Network request data is now saved to inspector cache in following cases:
 - Error status code;
 - No cached resource available;
 - Cached resource has ShouldNotBufferData option set.
Drive-by: refactored didReceiveResponse logic to be clearer.

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::didReceiveResponse):
(WebCore::InspectorResourceAgent::didReceiveData):
* loader/cache/CachedResource.h:
(WebCore::CachedResource::shouldBufferData):

Canonical link: https://commits.webkit.org/120299@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134574 268f45cc-cd09-0410-ab3c-d52691b4dbfc