Source/WebCore/loader/cache/CachedResource.h
@@ -214,6 +214,7 @@ public:
     bool loadFailedOrCanceled() { return !m_error.isNull(); }
 
     bool shouldSendResourceLoadCallbacks() const { return m_options.sendLoadCallbacks == SendCallbacks; }
+    bool shouldBufferData() const { return m_options.shouldBufferData == BufferData; }
     
     virtual void destroyDecodedData() { }
 
